--- a/webapp/src/componentes/Navbar/Navbar.css
+++ b/webapp/src/componentes/Navbar/Navbar.css
@@ -1,14 +1,25 @@
 .NavbarItems{
-    background: linear-gradient(90deg,rgb(110,94,254)0%,rgba(73,63,252,1) 100%);
+    background: linear-gradient(90deg,rgb(212, 243, 255) 0%, #0d6efd 100%);
     height: 80px;
     display: flex;
     justify-content: center;
     align-items: center  ;
     font-size: 1.2rem;
+    border-radius: 1em;
+    margin-bottom: 1em;
+}
+
+.btn-primary {
+    background-color: rgb(255, 255, 255);
+    color:#0d6efd;
+    margin-right: 4.5rem;
+    border-radius: 0.5em;
+    margin-bottom: 0.5em;
+    font-size: 1.2rem;
 }
 
 .navbar-logo{
-    color:#fff;
+    color: #2f67b9;
     justify-self: start;
     margin-left: 20px;
     cursor:pointer;
@@ -26,7 +37,8 @@
     text-align: center;
     width: 70vw;
     justify-content: end;
-    margin-right: 2rem;
+    margin-right: 1rem;
+    margin-top: 0.5em;
 }
 
 .nav-links {
@@ -37,9 +49,10 @@
 }
 
 .nav-links:hover{
-    background-color: #6d76f7;
+    background-color: #fff;
     border-radius: 4px;
     transition: all 0.2s ease-out;
+    border-radius: 0.5em;
 }
 
 .fa-bars{
