Arreglado error letras blancas en casi toda la app

--- a/webapp/src/paginas/Pag.css
+++ b/webapp/src/paginas/Pag.css
@@ -7,10 +7,10 @@ h1{
     align-items: center  ;
 }
 
-h2 {
+#lema {
     color:rgb(255, 255, 255);
     
-    font-family: monospace;
+    font-family: sans-serif;
     display: flex;
     justify-content: center;
     align-items: center  ;
