--- a/webapp/src/componentes/Pedidos/pedidos.css
+++ b/webapp/src/componentes/Pedidos/pedidos.css
@@ -5,6 +5,11 @@
     margin-left: 6em;
 }
 
+.mis-pedidos {
+    color: #0d6efd;
+    font-size: 3em;
+}
+
 .numeroPedido {
     font-size: 1.8em;
 }
