--- a/webapp/src/componentes/Navbar/Navbar.css
+++ b/webapp/src/componentes/Navbar/Navbar.css
@@ -16,9 +16,9 @@
 
 .prof-name {
     color: #fff;
-    margin-right: 3.5em;
+    margin-right: 8em;
     min-width: 9em;
-    margin-left: 1em;
+    margin-left: 0.5em;
 }
 
 .prof-img {
@@ -30,11 +30,11 @@
     color:#0d6efd;
     border-radius: 0.5em;
     margin-bottom: 0.5em;
-    margin-right: 10em;
+    margin-right: 5em;
     font-size: 1.2rem;
 }
 
-.btn-primary {
+.btn-primary-logout {
     background-color: rgb(255, 255, 255);
     color:#0d6efd;
     border-radius: 0.5em;
